# gokay_ea

./: justfile  pyproject.toml
src/gokay_ea/: main.py
